Add carousel coding and created html files for about and projects

--- a/index.html
+++ b/index.html
@@ -8,9 +8,81 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <div>
-      <div>
+    <!-- ======This is where carousel goes=== -->
+    <div id="Carousel" class="carousel slide jumbotron">
+      <div class="container">
+        <ol class="carousel-indicators">
+          <li class="active" data-target="#Carousel" data-slide-to="0"></li>
+          <li data-target="#Carousel" data-slide-to="1"></li>
+          <li data-target="#Carousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="item active">
+            <h1>Header 1</h1>
+            <p>info</p>
+          </div>
+          <div class="item">
+            <h1>Header 2</h1>
+            <p>info</p>
+          </div>
+          <div class="item">
+            <h1>Header 3</h1>
+            <p>info</p>
+          </div>
+        </div>
       </div>
+      <a href="#Carousel" class="left carousel-control" data-slide="prev">
+        <span class="icon-prev"></span>
+      </a>
+      <a href="#Carousel" class="right carousel-control" data-slide="next">
+        <span class="icon-next"></span>
+      </a>
+    </div>
+
+
+    <!-=======this is where carousel ends ======= -->
+    <div>
+      <header>
+        <h1>Joanna's Portfolio</h1>
+      </header>
+      <ul>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="projects.html">Projects</a></li>
+      </ul>
+      <h2>Recent Projects</h2>
+      <div>
+        <div>
+          <img src="" alt="">
+          <h3>Project Name</h3>
+          <p>Mini Description</p>
+        </div>
+        <div>
+          <img src="" alt="">
+          <h3>Project Name</h3>
+          <p>Mini Description</p>
+        </div>
+        <div>
+          <img src="" alt="">
+          <h3>Project Name</h3>
+          <p>Mini Description</p>
+        </div>
+      </div>
+      <div>
+        <img src="" alt="">
+        <h3>Project Name</h3>
+        <p>Mini Description</p>
+      </div>
+      <div>
+        <img src="" alt="">
+        <h3>Project Name</h3>
+        <p>Mini Description</p>
+      </div>
+      <div>
+        <img src="" alt="">
+        <h3>Project Name</h3>
+        <p>Mini Description</p>
+      </div>
+    </div>
     </div>
   </body>
 </html>
