--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link href="public/bootstrap-3.3.7-dis/css/bootstrap.min.css" rel="stylesheet" type=text/css>
+    <link href="public/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" type=text/css>
     <link href=""public/css/style.css" rel="stylesheet" type="text/css">
     <title>Portfolio</title>
   </head>
@@ -41,7 +41,7 @@
 
 
     <!-=======this is where carousel ends ======= -->
-    <div>
+    <div class="container">
       <header>
         <h1>Joanna's Portfolio</h1>
       </header>
