Added project information for the columns

--- a/about.html
+++ b/about.html
@@ -7,4 +7,12 @@
     <link href=""public/css/style.css" rel="stylesheet" type="text/css">
     <title>About</title>
   </head>
+  <body>
+    <div class="container">
+      <header>
+        <h1>About Joanna</h1>
+      </header>
+      <p> paragraph about me......</p>
+    </div>
+  </body>
 </html>
