--- a/projects.html
+++ b/projects.html
@@ -7,4 +7,14 @@
     <link href=""public/css/style.css" rel="stylesheet" type="text/css">
     <title>Projects</title>
   </head>
+  <body>
+    <div class="container">
+      <header>
+        <h1>Projects</h1>
+      </header>
+      <ol>
+        <li></li>
+      </ol>
+    </div>
+  </body>
 </html>
