Added content to carousel

--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
         </ol>
         <div class="carousel-inner">
           <div class="item active">
-            <h1>Header 1</h1>
-            <p>info</p>
+            <h1>Who Am I?</h1>
+            <p>Learn more about Joanna.....</p>
           </div>
           <div class="item">
-            <h1>Header 2</h1>
-            <p>info</p>
+            <h1>Check Out My Latest Project!</h1>
+            <p>Check out my latest website. It's a travel website for Seoul, Korea.</p>
+            <p>BUTTON</p>
           </div>
           <div class="item">
-            <h1>Header 3</h1>
-            <p>info</p>
+            <h1>My Resumé</h1>
+            <p>Learn more about my work experience..</p>
           </div>
         </div>
       </div>
@@ -43,7 +44,7 @@
     <!-=======this is where carousel ends ======= -->
     <div class="container">
       <header>
-        <h1>Joanna's Portfolio</h1>
+        <h1>Joanna Anderson</h1>
       </header>
       <ul>
         <li><a href="about.html">About Me</a></li>
