--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="public/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" type=text/css>
-    <link href=""public/css/style.css" rel="stylesheet" type="text/css">
+    <link href="public/css/style.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <title>Portfolio</title>
   </head>
   <body>
-    <!-- ======This is where carousel goes=== -->
     <div id="Carousel" class="carousel slide jumbotron">
       <div class="container">
         <ol class="carousel-indicators">
@@ -39,14 +39,12 @@
         <span class="icon-next"></span>
       </a>
     </div>
-
-
-    <!-=======this is where carousel ends ======= -->
     <div class="container">
       <header>
         <h1>Joanna Anderson</h1>
       </header>
       <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
       </ul>
