--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="public/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" type=text/css>
-    <link href=""public/css/style.css" rel="stylesheet" type="text/css">
+    <link href="public/css/style.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <title>Projects</title>
   </head>
   <body>
@@ -12,8 +13,20 @@
       <header>
         <h1>Projects</h1>
       </header>
+      <ul>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="projects.html">Projects</a></li>
+      </ul>
       <ol>
-        <li></li>
+        <li><a href="">Vacation Site</a></li>
+        <li><a href="">Cupcake Shop</a></li>
+        <li><a href="">Blog Site</a></li>
+        <li><a href="">Favorite Band</a></li>
+        <li><a href="">Interior Design</a></li>
+        <li><a href="">Resumé</a></li>
+        <li><a href="">Boring Lecture</a></li>
+        <li><a href="">Beagle Adoption Website</a></li>
+        <li><a href="">Island Resort</a></li>
       </ol>
     </div>
   </body>
