--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="public/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" type=text/css>
     <link href="public/css/style.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Sarina" rel="stylesheet">
     <title>Projects</title>
   </head>
   <body>
