Put carousel html in separate file because it currently is not working and needs to be fixed

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <script src="public/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
     <link href="public/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" type=text/css>
     <link href="public/css/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Sarina" rel="stylesheet">
@@ -13,7 +13,8 @@
       <header>
         <h1>About Joanna</h1>
       </header>
-      <ul>
+      <ul class="nav nav-pills pull-right">
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
       </ul>
