--- a/index.html
+++ b/index.html
@@ -2,52 +2,29 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="public/bootstrap-3.3.7-dist/js/bootstrap.min.js"> </script>
     <link href="public/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" type=text/css>
     <link href="public/css/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Sarina" rel="stylesheet">
     <title>Portfolio</title>
   </head>
   <body>
-    <div id="Carousel" class="carousel slide jumbotron">
-      <div class="container">
-        <ol class="carousel-indicators">
-          <li class="active" data-target="#Carousel" data-slide-to="0"></li>
-          <li data-target="#Carousel" data-slide-to="1"></li>
-          <li data-target="#Carousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="item active">
-            <h1>Who Am I?</h1>
-            <p>Learn more about Joanna.....</p>
-          </div>
-          <div class="item">
-            <h1>Check Out My Latest Project!</h1>
-            <p>Check out my latest website. It's a travel website for Seoul, Korea.</p>
-            <p>BUTTON</p>
-          </div>
-          <div class="item">
-            <h1>My Resumé</h1>
-            <p>Learn more about my work experience..</p>
-          </div>
-        </div>
-      </div>
-      <a href="#Carousel" class="left carousel-control" data-slide="prev">
-        <span class="icon-prev"></span>
-      </a>
-      <a href="#Carousel" class="right carousel-control" data-slide="next">
-        <span class="icon-next"></span>
-      </a>
-    </div>
     <div class="container">
       <header>
         <h1>Joanna Anderson</h1>
       </header>
-      <ul>
+    </div>
+    <!-- ===where carousel should go==== -->
+    <div class="container">
+      <ul class="nav nav-pills pull-right">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
       </ul>
+      <div class="jumbotron">
+        <h1>Heading</h1>
+        <p>checkitoutparagraph</p>
+      </div>
       <h2>Recent Projects</h2>
       <div>
         <div>
