Added column classes to sub content

--- a/index.html
+++ b/index.html
@@ -26,40 +26,41 @@
         <p>checkitoutparagraph</p>
       </div>
       <h2>Recent Projects</h2>
-      <div>
-        <div>
+      <div class="row">
+        <div class="col-sm-4">
           <img src="" alt="">
           <h3>Vacation Website</h3>
           <p>This was my first Bootstrap exercise. The website contains HTML, Bootstrap classes, and my own stylesheet. Check it out on <a href="https://github.com/jsaerom/vacation-site">my GitHub</a>!</p>
         </div>
-        <div>
+        <div class="col-sm-4">
           <img src="" alt="">
           <h3>Beagle Adoption</h3>
           <p>This was my very first 'creative' project. It contains HTML. Check it out on <a href="https://github.com/jsaerom/pet-website">my GitHub</a>!</p>
         </div>
+        <div class="col-sm-4">
+          <img src="" alt="">
+          <h3>Resume</h3>
+          <p>This is my resume. The website contains HTML, CSS, divs, and spans. </p>
+          Check it out on <a href="">my GitHub</a>!</p>
+        </div>
       </div>
-      <div>
-        <img src="" alt="">
-        <h3>Resume</h3>
-        <p>This is my resume. The website contains HTML, CSS, divs, and spans. </p>
-        Check it out on <a href="">my GitHub</a>!</p>
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="" alt="">
+          <h3>Blog Site</h3>
+          <p>This was an exercise to practice div and span. Check it out on <a href="https://github.com/jsaerom/blog-site">my GitHub</a>!</p>
+        </div>
+        <div class="col-sm-4">
+          <img src="" alt="">
+          <h3>Interior Design</h3>
+          <p>This was an exercise to practice floats and creating columns. Check it out on <a href="https://github.com/jsaerom/interior-design">my GitHub</a>!</p>
+        </div>
+        <div class="col-sm-4">
+          <img src="" alt="">
+          <h3>First Webpage</h3>
+          <p>This was my very first website. Check it out on <a href="https://github.com/jsaerom/first-web-page">my GitHub</a>!</p>
+        </div>
       </div>
-      <div>
-        <img src="" alt="">
-        <h3>Blog Site</h3>
-        <p>This was an exercise to practice div and span. Check it out on <a href="https://github.com/jsaerom/blog-site">my GitHub</a>!</p>
-      </div>
-      <div>
-        <img src="" alt="">
-        <h3>Interior Design</h3>
-        <p>This was an exercise to practice floats and creating columns. Check it out on <a href="https://github.com/jsaerom/interior-design">my GitHub</a>!</p>
-      </div>
-      <div>
-        <img src="" alt="">
-        <h3>First Webpage</h3>
-        <p>This was my very first website. Check it out on <a href="https://github.com/jsaerom/first-web-page">my GitHub</a>!</p>
-      </div>
-    </div>
     </div>
   </body>
 </html>
