Made updates to fonts in CSS file

--- a/projects.html
+++ b/projects.html
@@ -18,16 +18,16 @@
         <li><a href="about.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
       </ul>
-      <ol>
-        <li><a href="">Vacation Site</a></li>
-        <li><a href="">Cupcake Shop</a></li>
-        <li><a href="">Blog Site</a></li>
-        <li><a href="">Favorite Band</a></li>
-        <li><a href="">Interior Design</a></li>
-        <li><a href="">Resumé</a></li>
-        <li><a href="">Boring Lecture</a></li>
-        <li><a href="">Beagle Adoption Website</a></li>
-        <li><a href="">Island Resort</a></li>
+      <ol class="project-list">
+        <li><a href="https://github.com/jsaerom/vacation-site">Vacation Site</a></li>
+        <li><a href="https://github.com/jsaerom/cupcake-shop">Cupcake Shop</a></li>
+        <li><a href="https://github.com/jsaerom/blog-site">Blog Site</a></li>
+        <li><a href="https://github.com/jsaerom/favoriteband">Favorite Band</a></li>
+        <li><a href="https://github.com/jsaerom/interior-design">Interior Design</a></li>
+        <li><a href="">Resume</a></li>
+        <li><a href="https://github.com/jsaerom/boring-lecture">Boring Lecture</a></li>
+        <li><a href="https://github.com/jsaerom/pet-website">Beagle Adoption Website</a></li>
+        <li><a href="https://github.com/jsaerom/island-resort">Island Resort</a></li>
       </ol>
     </div>
   </body>
