--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <li><a href="about.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
       </ul>
-      <p> paragraph about me......</p>
+      <p class="about-me"> paragraph about me......</p>
     </div>
   </body>
 </html>
