--- a/index.html
+++ b/index.html
@@ -22,43 +22,44 @@
         <li><a href="projects.html">Projects</a></li>
       </ul>
       <div class="jumbotron">
-        <h1>Heading</h1>
-        <p>checkitoutparagraph</p>
+        <h1>Who Am I?</h1>
+        <p>I am a Salesforce Administrator and soon-to-be Java developer.</p>
+        <p><a href="about.html" class="btn btn-default">Learn More</a></p>
       </div>
       <h2>Recent Projects</h2>
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-xs-4">
           <img src="" alt="">
           <h3>Vacation Website</h3>
-          <p>This was my first Bootstrap exercise. The website contains HTML, Bootstrap classes, and my own stylesheet. Check it out on <a href="https://github.com/jsaerom/vacation-site">my GitHub</a>!</p>
+          <p>This was my first Bootstrap exercise. The website contains HTML, Bootstrap classes, and my own stylesheet. Check it out on <a href="https://github.com/jsaerom/vacation-site"><strong>my GitHub</strong></a>!</p>
         </div>
-        <div class="col-sm-4">
+        <div class="col-xs-4">
           <img src="" alt="">
           <h3>Beagle Adoption</h3>
-          <p>This was my very first 'creative' project. It contains HTML. Check it out on <a href="https://github.com/jsaerom/pet-website">my GitHub</a>!</p>
+          <p>This was my very first 'creative' project. It contains HTML. Check it out on <a href="https://github.com/jsaerom/pet-website"><strong>my GitHub</strong></a>!</p>
         </div>
-        <div class="col-sm-4">
+        <div class="col-xs-4">
           <img src="" alt="">
           <h3>Resume</h3>
           <p>This is my resume. The website contains HTML, CSS, divs, and spans. </p>
-          Check it out on <a href="">my GitHub</a>!</p>
+          Check it out on <a href=""><strong>my GitHub</strong></a>!</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-xs-4">
           <img src="" alt="">
           <h3>Blog Site</h3>
-          <p>This was an exercise to practice div and span. Check it out on <a href="https://github.com/jsaerom/blog-site">my GitHub</a>!</p>
+          <p>This was an exercise to practice div and span. Check it out on <a href="https://github.com/jsaerom/blog-site"><strong>my GitHub</strong></a>!</p>
         </div>
-        <div class="col-sm-4">
+        <div class="col-xs-4">
           <img src="" alt="">
           <h3>Interior Design</h3>
-          <p>This was an exercise to practice floats and creating columns. Check it out on <a href="https://github.com/jsaerom/interior-design">my GitHub</a>!</p>
+          <p>This was an exercise to practice floats and creating columns. Check it out on <a href="https://github.com/jsaerom/interior-design"><strong>my GitHub</strong></a>!</p>
         </div>
-        <div class="col-sm-4">
+        <div class="col-xs-4">
           <img src="" alt="">
           <h3>First Webpage</h3>
-          <p>This was my very first website. Check it out on <a href="https://github.com/jsaerom/first-web-page">my GitHub</a>!</p>
+          <p>This was my very first website. Check it out on <a href="https://github.com/jsaerom/first-web-page"><strong>my GitHub</strong></a>!</p>
         </div>
       </div>
     </div>
