Resized all images

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </ul>
       <div class="jumbotron">
         <h1>Who Am I?</h1>
-        <p>I am a Salesforce Administrator and soon-to-be Java developer.</p>
+        <p><em>I am a Salesforce Administrator and soon-to-be Java developer.</em></p>
         <p><a href="about.html" class="btn btn-default">Learn More</a></p>
       </div>
       <h2>Recent Projects</h2>
