Added responsive images to columns

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
       <h2>Recent Projects</h2>
       <div class="row">
         <div class="col-xs-4">
-          <img src="" alt="">
+          <img src="public/img/korea.jpg" alt="Picture of Korea" class="img-responsive">
           <h3>Vacation Website</h3>
           <p>This was my first Bootstrap exercise. The website contains HTML, Bootstrap classes, and my own stylesheet. Check it out on <a href="https://github.com/jsaerom/vacation-site"><strong>my GitHub</strong></a>!</p>
         </div>
         <div class="col-xs-4">
-          <img src="" alt="">
+          <img src="public/img/juniper.jpg" alt="Picture of Juniper" class="img-responsive">
           <h3>Beagle Adoption</h3>
           <p>This was my very first 'creative' project. It contains HTML. Check it out on <a href="https://github.com/jsaerom/pet-website"><strong>my GitHub</strong></a>!</p>
         </div>
         <div class="col-xs-4">
-          <img src="" alt="">
+          <img src="public/img/resume.jpg" alt="Picture of Resume" class="img-responsive">
           <h3>Resume</h3>
           <p>This is my resume. The website contains HTML, CSS, divs, and spans. </p>
           Check it out on <a href=""><strong>my GitHub</strong></a>!</p>
@@ -47,17 +47,17 @@
       </div>
       <div class="row">
         <div class="col-xs-4">
-          <img src="" alt="">
+          <img src="public/img/blog.jpg" alt="Picture of Computer" class="img-responsive">
           <h3>Blog Site</h3>
           <p>This was an exercise to practice div and span. Check it out on <a href="https://github.com/jsaerom/blog-site"><strong>my GitHub</strong></a>!</p>
         </div>
         <div class="col-xs-4">
-          <img src="" alt="">
+          <img src="interior.jpg" alt="Picture of Room" class="img-responsive">
           <h3>Interior Design</h3>
           <p>This was an exercise to practice floats and creating columns. Check it out on <a href="https://github.com/jsaerom/interior-design"><strong>my GitHub</strong></a>!</p>
         </div>
         <div class="col-xs-4">
-          <img src="" alt="">
+          <img src="public/img/icecream.jpg" alt="Picture of Ice Cream" class="img-responsive">
           <h3>First Webpage</h3>
           <p>This was my very first website. Check it out on <a href="https://github.com/jsaerom/first-web-page"><strong>my GitHub</strong></a>!</p>
         </div>
