--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="public/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" type=text/css>
     <link href="public/css/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Sarina" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <title>Portfolio</title>
   </head>
   <body>
@@ -21,20 +22,22 @@
         <li><a href="about.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
       </ul>
-      <div class="jumbotron">
-        <h1>Who Am I?</h1>
-        <p><em>I am a Salesforce Administrator and soon-to-be Java developer.</em></p>
-        <p><a href="about.html" class="btn btn-default">Learn More</a></p>
+      <div class="row">
+        <div class="jumbotron col-xs-10 col-xs-offset-1">
+          <h1>Who Am I?</h1>
+          <p><em>I am a Salesforce Administrator and soon-to-be Java developer.</em></p>
+          <p><a href="about.html" class="btn btn-default">Learn More</a></p>
+        </div>
       </div>
       <h2>Recent Projects</h2>
       <div class="row">
         <div class="col-xs-4">
-          <img src="public/img/korea.jpg" alt="Picture of Korea" class="img-responsive">
+          <a href="https://github.com/jsaerom/vacation-site"><img src="public/img/korea.jpg" alt="Picture of Korea" class="img-responsive"></a>
           <h3>Vacation Website</h3>
           <p>This was my first Bootstrap exercise. The website contains HTML, Bootstrap classes, and my own stylesheet. Check it out on <a href="https://github.com/jsaerom/vacation-site"><strong>my GitHub</strong></a>!</p>
         </div>
         <div class="col-xs-4">
-          <img src="public/img/juniper.jpg" alt="Picture of Juniper" class="img-responsive">
+          <a href="https://github.com/jsaerom/pet-website"><img src="public/img/juniper.jpg" alt="Picture of Juniper" class="img-responsive"></a>
           <h3>Beagle Adoption</h3>
           <p>This was my very first 'creative' project. It contains HTML. Check it out on <a href="https://github.com/jsaerom/pet-website"><strong>my GitHub</strong></a>!</p>
         </div>
@@ -47,17 +50,17 @@
       </div>
       <div class="row">
         <div class="col-xs-4">
-          <img src="public/img/blog.jpg" alt="Picture of Computer" class="img-responsive">
+          <a href="https://github.com/jsaerom/blog-site"><img src="public/img/blog.jpg" alt="Picture of Computer" class="img-responsive"></a>
           <h3>Blog Site</h3>
           <p>This was an exercise to practice div and span. Check it out on <a href="https://github.com/jsaerom/blog-site"><strong>my GitHub</strong></a>!</p>
         </div>
         <div class="col-xs-4">
-          <img src="interior.jpg" alt="Picture of Room" class="img-responsive">
+          <a href="https://github.com/jsaerom/interior-design"><img src="public/img/room.jpg" alt="Picture of Room" class="img-responsive"></a>
           <h3>Interior Design</h3>
           <p>This was an exercise to practice floats and creating columns. Check it out on <a href="https://github.com/jsaerom/interior-design"><strong>my GitHub</strong></a>!</p>
         </div>
         <div class="col-xs-4">
-          <img src="public/img/icecream.jpg" alt="Picture of Ice Cream" class="img-responsive">
+          <a href="https://github.com/jsaerom/first-web-page"><img src="public/img/icecream.jpg" alt="Picture of Ice Cream" class="img-responsive"></a>
           <h3>First Webpage</h3>
           <p>This was my very first website. Check it out on <a href="https://github.com/jsaerom/first-web-page"><strong>my GitHub</strong></a>!</p>
         </div>
