--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <link href="public/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" type=text/css>
     <link href="public/css/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Sarina" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <title>Projects</title>
   </head>
   <body>
