Added content to About.html

--- a/about.html
+++ b/about.html
@@ -19,7 +19,19 @@
         <li><a href="about.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
       </ul>
-      <p class="about-me"> paragraph about me......</p>
+      <br>
+      <br>
+      <div class="row edit-margin">
+        <div class="col-sm-3 col-sm-offset-1">
+          <img src="public/img/rsz_joanna.JPG" alt="Image of Me" class="about-me-img img-responsive">
+        </div>
+        <div class="col-sm-8">
+          <p>Born and raised in Korea, Joanna was constantly surrounded by the newest and latest technology. In middle school, Joanna began coding basic HTML to create her own themes on Xanga. Shortly after, Joanna gave up her coding hobby to focus on her school work.</p>
+          <p>After graduating from high school in Virginia, Joanna attended American University where she studied Psychology and Communication. While she enjoyed her coursework, she decided not to pursue a career in her field. Instead, she began volunteering at a local education/arts non-profit (Life Pieces To Masterpieces) which allowed her to further develop her passion for youth development work. She was soon hired by the organization and wore many hats including: Office Manager, Volunteer Coordinator, and HR Manager. In 2015, Joanna left Life Pieces To Masterpieces to work at Communities In Schools, a national dropout prevention non-profit allowing her to make an impact on a much larger scale. During this time, Joanna had the opportunity to see how a Database Specialist manages a database, mainly Salesforce. She was fascinated by the work invovled in maintaining a CRM. When the Database Specialist position became vacant, Joanna immediately jumped at the opportunity to learn more about backend development and management. In June 2015, Joanna became a certified Salesforce Administrator.
+          <p>Joanna spent the next year managing Salesforce, creating custom processes, training end users, etc. As she became an expert in her area, she became more and more curious about what codes were being processed behind the scenes. As her curiosity grew, she knew what her next 'career' step had to be: go to a coding school. After much research, Joanna learned about Epicodus and immediately got the same tingly feeling she got when she learned about her two previous employers. That's when she knew Epicodus was where she needed to be and took the plunge and moved to Portland, OR.</p>
+          <p>Joanna is an avid traveler and has traveled to over 20 countries including: Brazil, Honduras, Switzerland, Taiwan, Spain, Thailand, Indonesia, and the Philippines. When she is not travelling, she enjoys hiking, eating, doing yoga, and people watching.</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
