--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="row">
         <div class="jumbotron col-xs-10 col-xs-offset-1">
           <h1>Who Am I?</h1>
-          <p><em class="lrg-txt">Salesforce Administrator, soon-to-be programmer, traveler.</em></p>
+          <p class="lrg-txt"><em>Salesforce Administrator, soon-to-be programmer, traveler. Click the button below to learn more about Joanna</em></p>
           <p><a href="about.html" class="btn btn-default">Learn More</a></p>
         </div>
       </div>
