Added span element to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="public/css/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Sarina" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
     <title>Portfolio</title>
   </head>
   <body>
@@ -15,7 +16,6 @@
         <h1>Joanna Anderson</h1>
       </header>
     </div>
-    <!-- ===where carousel should go==== -->
     <div class="container">
       <ul class="nav nav-pills pull-right">
         <li><a href="index.html">Home</a></li>
@@ -24,8 +24,8 @@
       </ul>
       <div class="row">
         <div class="jumbotron col-xs-10 col-xs-offset-1">
-          <h1>Who Am I?</h1>
-          <p class="lrg-txt"><em>Salesforce Administrator, soon-to-be programmer, traveler. Click the button below to learn more about Joanna</em></p>
+          <h1>Joanna 101</h1>
+          <p class="lrg-txt"><em>Salesforce Administrator, soon-to-be programmer, traveler. <br><span class="small-txt">Click the button below to learn more about Joanna</span></em></p>
           <p><a href="about.html" class="btn btn-default">Learn More</a></p>
         </div>
       </div>
