Added social media hyperlinks

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sarina" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="public/font-awesome-4.6.3/css/font-awesome.min.css">
     <title>Portfolio</title>
   </head>
   <body>
@@ -65,6 +66,12 @@
           <p>This was my very first website. Check it out on <a href="https://github.com/jsaerom/first-web-page"><strong>my GitHub</strong></a>!</p>
         </div>
       </div>
+      <!-- ==this is where social media icon should go=== -->
+      <div class="soc-media">
+        <hr></hr>
+        <a href="mailto:joanna.saerom.anderson@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/jsaerom1/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href="https://www.facebook.com/joanna.anderson.1048"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
     </div>
   </body>
 </html>
