Updated index.html and project.html with resume link

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
       <div class="row">
         <div class="jumbotron col-xs-10 col-xs-offset-1">
           <h1>Joanna 101</h1>
-          <p class="lrg-txt"><em>Salesforce Administrator, soon-to-be programmer, traveler. <br><span class="small-txt">Click the button below to learn more about Joanna</span></em></p>
-          <p><a href="about.html" class="btn btn-default">Learn More</a></p>
+          <p class="lrg-txt"><em>Salesforce Administrator, soon-to-be programmer, traveler. <br><span class="small-txt">Check out her personal bio and resume by clicking the buttons below!</span></em></p>
+          <p>
+            <a href="about.html" class="btn btn-default">Personal Bio</a>
+            <a href="https://jsaerom.github.io/my-resume/" class="btn btn-default">Resume</a>
+          </p>
         </div>
       </div>
       <h2>Recent Projects</h2>
@@ -43,10 +46,10 @@
           <p>This was my very first 'creative' project. It contains HTML. Check it out on <a href="https://github.com/jsaerom/pet-website"><strong>my GitHub</strong></a>!</p>
         </div>
         <div class="col-xs-4">
-          <img src="public/img/resume.jpg" alt="Picture of Resume" class="img-responsive">
+          <a href="https://github.com/jsaerom/my-resume"><img src="public/img/resume.jpg" alt="Picture of Resume" class="img-responsive"></a>
           <h3>Resume</h3>
           <p>This is my resume. The website contains HTML, CSS, divs, and spans. </p>
-          Check it out on <a href=""><strong>my GitHub</strong></a>!</p>
+          Check it out on <a href="https://github.com/jsaerom/my-resume"><strong>my GitHub</strong></a>!</p>
         </div>
       </div>
       <div class="row">
@@ -72,6 +75,7 @@
         <a href="mailto:joanna.saerom.anderson@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/jsaerom1/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         <a href="https://www.facebook.com/joanna.anderson.1048"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+        <a href=""><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
     </div>
   </body>
 </html>
