--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
         <li><a href="https://github.com/jsaerom/blog-site">Blog Site</a></li>
         <li><a href="https://github.com/jsaerom/favoriteband">Favorite Band</a></li>
         <li><a href="https://github.com/jsaerom/interior-design">Interior Design</a></li>
-        <li><a href="">Resume</a></li>
+        <li><a href="https://github.com/jsaerom/my-resume">Resume</a></li>
         <li><a href="https://github.com/jsaerom/boring-lecture">Boring Lecture</a></li>
         <li><a href="https://github.com/jsaerom/pet-website">Beagle Adoption Website</a></li>
         <li><a href="https://github.com/jsaerom/island-resort">Island Resort</a></li>
