--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
           <p>This was my very first website. Check it out on <a href="https://github.com/jsaerom/first-web-page"><strong>my GitHub</strong></a>!</p>
         </div>
       </div>
-      <!-- ==this is where social media icon should go=== -->
       <div class="soc-media">
         <hr></hr>
         <a href="mailto:joanna.saerom.anderson@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/jsaerom1/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         <a href="https://www.facebook.com/joanna.anderson.1048"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
         <a href=""><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+      </div>
     </div>
   </body>
 </html>
