made update to image files from JPG to jpg

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
       <br>
       <div class="row edit-margin">
         <div class="col-sm-3 col-sm-offset-1">
-          <img src="public/img/rsz_joanna.JPG" alt="Image of Me" class="about-me-img img-responsive">
+          <img src="public/img/rsz_joanna.jpg" alt="Image of Me" class="about-me-img img-responsive">
         </div>
         <div class="col-sm-8">
           <p>Born and raised in Korea, Joanna was constantly surrounded by the newest and latest technology. In middle school, Joanna began coding basic HTML to create her own themes on Xanga. Shortly after, Joanna gave up her coding hobby to focus on her school work.</p>
